syntax = "proto3";

package user;

service UserService {
  // Get user by ID
  rpc GetUser (GetUserRequest) returns (User) {}

  // Create a new user
  rpc CreateUser (CreateUserRequest) returns (User) {}

  // Update existing user
  rpc UpdateUser (UpdateUserRequest) returns (User) {}

  // Delete user
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}

  // Authenticate user
  rpc AuthenticateUser (AuthRequest) returns (AuthResponse) {}

  // Validate token
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
  bool is_active = 6;
  string created_at = 7;
  string updated_at = 8;
  optional string last_login = 9;
}

message GetUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  optional string role = 5;
}

message UpdateUserRequest {
  string id = 1;
  optional string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  optional string role = 5;
  optional bool is_active = 6;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  User user = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  optional User user = 2;
}